--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
       </nav>
 
       <ul class="contact-list">
-        <li class="contact-item"><a href="mailto:info@devstudio.com" class="contact-link email"> info@devstudio.com</a></li>
-        <li class="contact-item"><a href="tel:+38 096 111 11 11" class="contact-link phone"></span>+38 096 111 11 11</a></li>
+        <li class="contact-item"><a href="mailto:info@devstudio.com" class="contact-link email">
+           info@devstudio.com</a></li>
+        <li class="contact-item"><a href="tel:+38 096 111 11 11" class="contact-link phone">
+          +38 096 111 11 11</a></li>
       </ul>
     </div>
     </header>
@@ -47,27 +49,27 @@
       <section class="principles section">
         <div class="container">
         <ul class="principles-list">
-          <li class="principles-item">
+          <li class="principles-item atention">
             <h3 class="principles-title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="principles-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
-          <li class="principles-item">
+          <li class="principles-item punkt">
             <h3 class="principles-title">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="principles-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-          <li class="principles-item">
+          <li class="principles-item plan">
             <h3 class="principles-title">ПЛАНУВАННЯ</h3>
             <p class="principles-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li class="principles-item">
+          <li class="principles-item technology">
             <h3 class="principles-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="principles-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
@@ -160,6 +162,55 @@
             </div>
           </li>
         </ul>
+      </section>
+      <section class="clients section">
+        <div class="container">
+        <h2 class="clients-title">Постійні клієнти</h2>
+        <ul class="clients-list">
+          <li class="clients-item">
+            <a href="" class="clients-link">
+            <svg class="client-icon">
+              <use href="./images/symbol-defs.svg#icon-Client1"></use>
+            </svg>
+          </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link">
+            <svg class="client-icon">
+              <use href="./images/symbol-defs.svg#icon-Client2"></use>
+            </svg>
+          </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link">
+            <svg class="client-icon">
+              <use href="./images/symbol-defs.svg#icon-Client3"></use>
+            </svg>
+          </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link">
+            <svg class="client-icon">
+              <use href="./images/symbol-defs.svg#icon-Client4"></use>
+            </svg>
+          </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link">
+            <svg class="client-icon">
+              <use href="./images/symbol-defs.svg#icon-Client5"></use>
+            </svg>
+          </a>
+          </li>
+          <li class="clients-item">
+            <a href="" class="clients-link">
+            <svg class="client-icon">
+              <use href="./images/symbol-defs.svg#icon-Client6"></use>
+            </svg>
+          </a>
+          </li>
+        </ul>
+      </div>
       </section>
     </main>
 
