--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
     </nav>
 
     <ul class="contact-list">
-      <li class="contact-item"><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
-      <li class="contact-item"><a href="tel:+38 096 111 11 11" class="contact-link">+38 096 111 11 11</a></li>
+      <li class="contact-item"><a href="mailto:info@devstudio.com" class="contact-link email">info@devstudio.com</a></li>
+      <li class="contact-item"><a href="tel:+38 096 111 11 11" class="contact-link phone">+38 096 111 11 11</a></li>
     </ul>
   </div>
   </header>
