--- a/portfolio.html
+++ b/portfolio.html
@@ -167,14 +167,53 @@
 
     <!-- -------- footer------ -->
 
-    <footer>
+    <footer class="footer">
       <div class="container">
-      <a href="./" class="logotype"><span style="color: #2196f3">Web</span> <span style="color: #fff;">Studio</span></a>
-      <address class="adress">м. Київ, пр-т Лесі Українки, 26
-        <a href="mailto:info@devstudio.com" class="email-tel">info@devstudio.com</a>
-         <a href="tel:+38 096 111 11 11" class="email-tel">+38 096 111 11 11</a>
-        </address>
-        </footer> 
+        <div class="footer-div">
+          <div class="footer-div-child">
+            <a href="./" class="logotype"
+              ><span style="color: #2196f3">Web</span>
+              <span style="color: #fff">Studio</span></a
+            >
+            <address class="adress">
+              м. Київ, пр-т Лесі Українки, 26
+              <a href="mailto:info@devstudio.com" class="email-tel"
+                >info@devstudio.com</a
+              >
+              <a href="tel:+38 096 111 11 11" class="email-tel"
+                >+38 096 111 11 11</a
+              >
+            </address>
+          </div>
+
+          <div class="footer-div-child">
+            <h3 class="actions-div-title">приєднуйтесь</h3>
+            <ul class="sociallinks-list">
+              <li class="sociallinks-item">
+                <svg class="sociallinks-icon">
+                  <use href="/images/symbol-defs.svg#icon-insta"></use>
+                </svg>
+              </li>
+              <li class="sociallinks-item">
+                <svg class="sociallinks-icon">
+                  <use href="/images/symbol-defs.svg#icon-twit"></use>
+                </svg>
+              </li>
+              <li class="sociallinks-item">
+                <svg class="sociallinks-icon">
+                  <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </li>
+              <li class="sociallinks-item">
+                <svg class="sociallinks-icon">
+                  <use href="/images/symbol-defs.svg#icon-linkdin"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer> 
       <!-- -------- footer------ -->
     </div>
   </body>
