--- a/index.html
+++ b/index.html
@@ -35,12 +35,19 @@
 
         <ul class="contact-list">
           <li class="contact-item">
-            <a href="mailto:info@devstudio.com" class="contact-link email">
+            <a href="mailto:info@devstudio.com" class="contact-link email contact-hover">
+              <svg class="contact-icon contact-hover">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
               info@devstudio.com</a
             >
           </li>
           <li class="contact-item">
-            <a href="tel:+38 096 111 11 11" class="contact-link phone">
+            
+            <a href="tel:+38 096 111 11 11" class="contact-link phone contact-hover">
+              <svg class="contact-icon contact-hover">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
               +38 096 111 11 11</a
             >
           </li>
