--- a/portfolio.html
+++ b/portfolio.html
@@ -198,24 +198,32 @@
             <h3 class="actions-div-title">приєднуйтесь</h3>
             <ul class="sociallinks-list">
               <li class="sociallinks-item">
-                <svg class="sociallinks-icon">
-                  <use href="/images/symbol-defs.svg#icon-insta"></use>
-                </svg>
+                <a href="">
+                  <svg class="sociallinks-icon">
+                    <use href="/images/symbol-defs.svg#icon-insta"></use>
+                  </svg>
+                </a>
               </li>
               <li class="sociallinks-item">
-                <svg class="sociallinks-icon">
-                  <use href="/images/symbol-defs.svg#icon-twit"></use>
-                </svg>
+                <a href="">
+                  <svg class="sociallinks-icon">
+                    <use href="/images/symbol-defs.svg#icon-twit"></use>
+                  </svg>
+                </a>
               </li>
               <li class="sociallinks-item">
-                <svg class="sociallinks-icon">
-                  <use href="/images/symbol-defs.svg#icon-facebook"></use>
-                </svg>
+                <a href="">
+                  <svg class="sociallinks-icon">
+                    <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
               </li>
               <li class="sociallinks-item">
-                <svg class="sociallinks-icon">
-                  <use href="/images/symbol-defs.svg#icon-linkdin"></use>
-                </svg>
+                <a href="">
+                  <svg class="sociallinks-icon">
+                    <use href="/images/symbol-defs.svg#icon-linkdin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
           </div>
