--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             <h3 class="actions-div-title">приєднуйтесь</h3>
             <ul class="sociallinks-list">
               <li class="sociallinks-item">
-                <a href="">
+                <a href="" class="social-link">
                   <svg class="sociallinks-icon">
                     <use href="/images/symbol-defs.svg#icon-insta"></use>
                   </svg>
