--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
           <li class="contact-item">
             <a
               href="mailto:info@devstudio.com"
-              class="contact-link email contact-hover"
+              class="contact-link email"
             >
-              <svg class="contact-icon contact-hover">
+              <svg class="contact-icon">
                 <use href="./images/symbol-defs.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
@@ -48,9 +48,9 @@
           <li class="contact-item">
             <a
               href="tel:+38 096 111 11 11"
-              class="contact-link phone contact-hover"
+              class="contact-link phone"
             >
-              <svg class="contact-icon contact-hover">
+              <svg class="contact-icon">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
