--- a/portfolio.html
+++ b/portfolio.html
@@ -200,28 +200,28 @@
               <li class="sociallinks-item">
                 <a href="">
                   <svg class="sociallinks-icon">
-                    <use href="/images/symbol-defs.svg#icon-insta"></use>
+                    <use href="../images/symbol-defs.svg#icon-insta"></use>
                   </svg>
                 </a>
               </li>
               <li class="sociallinks-item">
                 <a href="">
                   <svg class="sociallinks-icon">
-                    <use href="/images/symbol-defs.svg#icon-twit"></use>
+                    <use href="../images/symbol-defs.svg#icon-twit"></use>
                   </svg>
                 </a>
               </li>
               <li class="sociallinks-item">
                 <a href="">
                   <svg class="sociallinks-icon">
-                    <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                    <use href="../images/symbol-defs.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="sociallinks-item">
                 <a href="">
                   <svg class="sociallinks-icon">
-                    <use href="/images/symbol-defs.svg#icon-linkdin"></use>
+                    <use href="../images/symbol-defs.svg#icon-linkdin"></use>
                   </svg>
                 </a>
               </li>
