--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
           <h2 class="activities-title">Чим ми займаємося</h2>
           <ul class="activities-list">
             <li class="activities-item">
-              <img src="images/img1.jpg" alt="Tablet" />
+              <img src="./images/img1.jpg" alt="Tablet" />
             </li>
             <li class="activities-item">
-              <img src="images/img2.jpg" alt="Laptop" />
+              <img src="./images/img2.jpg" alt="Laptop" />
             </li>
             <li class="activities-item">
-              <img src="images/img3.jpg" alt="Smartphone" />
+              <img src="./images/img3.jpg" alt="Smartphone" />
             </li>
           </ul>
         </div>
@@ -385,21 +385,21 @@
                 </a>
               </li>
               <li class="sociallinks-item">
-                <a href="">
+                <a href="" class="social-link">
                   <svg class="sociallinks-icon">
                     <use href="./images/symbol-defs.svg#icon-twit"></use>
                   </svg>
                 </a>
               </li>
               <li class="sociallinks-item">
-                <a href="">
+                <a href="" class="social-link">
                   <svg class="sociallinks-icon">
                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="sociallinks-item">
-                <a href="">
+                <a href="" class="social-link">
                   <svg class="sociallinks-icon">
                     <use href="./images/symbol-defs.svg#icon-linkdin"></use>
                   </svg>
