--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <ul class="principles-list">
             <li class="principles-item atention">
               <svg class="principles-icon">
-                <use href="../images/symbol-defs.svg#icon-principle1"></use>
+                <use href="./images/symbol-defs.svg#icon-principle1"></use>
               </svg>
               <h3 class="principles-title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="principles-text">
@@ -88,7 +88,7 @@
             </li>
             <li class="principles-item punkt">
               <svg class="principles-icon">
-                <use href="../images/symbol-defs.svg#icon-principle2"></use>
+                <use href="./images/symbol-defs.svg#icon-principle2"></use>
               </svg>
               <h3 class="principles-title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="principles-text">
@@ -98,7 +98,7 @@
             </li>
             <li class="principles-item plan">
               <svg class="principles-icon">
-                <use href="../images/symbol-defs.svg#icon-principle3"></use>
+                <use href="./images/symbol-defs.svg#icon-principle3"></use>
               </svg>
               <h3 class="principles-title">ПЛАНУВАННЯ</h3>
               <p class="principles-text">
@@ -107,7 +107,7 @@
             </li>
             <li class="principles-item technology">
               <svg class="principles-icon">
-                <use href="../images/symbol-defs.svg#icon-principles-4"></use>
+                <use href="./images/symbol-defs.svg#icon-principles-4"></use>
               </svg>
               <h3 class="principles-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="principles-text">
