--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/slyle.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Document</title>
   </head>
 
@@ -25,12 +32,12 @@
     <ul class="contact-list">
       <li class="contact-item"><a href="mailto:info@devstudio.com" class="contact-link email contact-hover">
         <svg class="contact-icon contact-hover">
-          <use href="./images/symbol-defs.svg#icon-envelope"></use>
+          <use href="./images/links.svg#icon-envelope"></use>
         </svg>
         info@devstudio.com</a></li>
       <li class="contact-item"><a href="tel:+38 096 111 11 11" class="contact-link phone contact-hover">
         <svg class="contact-icon contact-hover">
-          <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+          <use href="./images/links.svg#icon-smartphone"></use>
         </svg>
         +38 096 111 11 11</a></li>
     </ul>
@@ -51,7 +58,7 @@
       <div class="container">
       <ul class="portfolio-list">
         <li class="portfolio-item">
-          <a href="">
+          <a href="" class="portfolio-link">
           <div class="portfolio-img-div">
           <img src="./images_portfolio/Технокряк.jpg" alt="Portfolio" width="370px" />
         </div>
@@ -62,8 +69,8 @@
         </a>
         </li>
         <li class="portfolio-item">
-          <a href="">
-          <div class="iportfolio-img-div">
+          <a href="" class="portfolio-link">
+          <div class="portfolio-img-div">
           <img
             src="./images_portfolio/Постер New Orlean vs Golden Star.jpg"
             alt="Portfolio"
@@ -77,7 +84,7 @@
         </a>
         </li>
         <li class="portfolio-item">
-          <a href="">
+          <a href="" class="portfolio-link">
           <div class="portfolio-img-div">
           <img
             src="./images_portfolio/Ресторан Seafood.jpg"
@@ -92,7 +99,7 @@
         </a>
         </li>
         <li class="portfolio-item">
-          <a href="">
+          <a href="" class="portfolio-link">
           <div class="portfolio-img-div">
           <img src="./images_portfolio/Проєкт Prime.jpg" alt="Portfolio" width="370px" />
         </div>
@@ -102,7 +109,7 @@
           </div>
         </li>
         <li class="portfolio-item">
-          <a href="">
+          <a href="" class="portfolio-link">
           <div class="portfolio-img-div">
           <img src="./images_portfolio/Проєкт Boxes.jpg" alt="Portfolio" width="370px" />
         </div>
@@ -113,7 +120,7 @@
         </a>
         </li>
         <li class="portfolio-item">
-          <a href="">
+          <a href="" class="portfolio-link">
           <div class="portfolio-img-div">
           <img
             src="./images_portfolio/Inspiration has no Borders.jpg"
@@ -128,7 +135,7 @@
         </a>
         </li>
         <li class="portfolio-item">
-          <a href="">
+          <a href="" class="portfolio-link">
           <div class="portfolio-img-div">
           <img
             src="./images_portfolio/Видання Limited Edition.jpg"
@@ -143,7 +150,7 @@
         </a>
         </li>
         <li class="portfolio-item">
-          <a href="">
+          <a href="" class="portfolio-link">
           <div class="portfolio-img-div">
           <img src="./images_portfolio/Проєкт LAB.jpg" alt="Portfolio" width="370px" />
           </div>
@@ -154,7 +161,7 @@
         </a>
         </li>
         <li class="portfolio-item">
-          <a href="">
+          <a href="" class="portfolio-link">
           <div class="portfolio-img-div">
           <img
             src="./images_portfolio/Growing Business.jpg"
@@ -198,30 +205,30 @@
             <h3 class="actions-div-title">приєднуйтесь</h3>
             <ul class="sociallinks-list">
               <li class="sociallinks-item">
-                <a href="">
+                <a href="" class="social-link">
                   <svg class="sociallinks-icon">
                     <use href="./images/symbol-defs.svg#icon-insta"></use>
                   </svg>
                 </a>
               </li>
               <li class="sociallinks-item">
-                <a href="">
+                <a href="" class="social-link">
                   <svg class="sociallinks-icon">
                     <use href="./images/symbol-defs.svg#icon-twit"></use>
                   </svg>
                 </a>
               </li>
               <li class="sociallinks-item">
-                <a href="">
+                <a href="" class="social-link">
                   <svg class="sociallinks-icon">
-                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    <use href="./images/symbol-defs.svg#icon-face"></use>
                   </svg>
                 </a>
               </li>
               <li class="sociallinks-item">
-                <a href="">
+                <a href="" class="social-link">
                   <svg class="sociallinks-icon">
-                    <use href="./images/symbol-defs.svg#icon-linkdin"></use>
+                    <use href="./images/symbol-defs.svg#icon-linkd"></use>
                   </svg>
                 </a>
               </li>
