--- a/index.html
+++ b/index.html
@@ -150,178 +150,188 @@
         </div>
       </section>
 
+      <!-- ---------------- team--------------------- -->
+
       <section class="team section">
         <div class="container">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <div>
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="team-list">
+            <li class="team-item">
               <img src="./images/foto1.jpg" alt="Team" width="200" />
-            </div>
 
-            <h3 class="team-name" style="font-weight: 500">Ігор Дем'яненко</h3>
-            <p class="team-text">Product Designer</p>
+              <div class="team-div">
+                <h3 class="team-name" style="font-weight: 500">
+                  Ігор Дем'яненко
+                </h3>
+                <p class="team-text">Product Designer</p>
 
-            <div class="actions-div">
-              <ul class="actions-list">
-                <li class="actions-item">
-                  <a href="" class="actions-link">
-                    <svg class="actions-icon">
-                      <use href="./images/symbol-defs.svg#icon-insta"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="actions-item">
-                  <a href="" class="actions-link">
-                    <svg class="actions-icon">
-                      <use href="./images/symbol-defs.svg#icon-face"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="actions-item">
-                  <a href="" class="actions-link">
-                    <svg class="actions-icon">
-                      <use href="./images/symbol-defs.svg#icon-twit"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="actions-item">
-                  <a href="" class="actions-link">
-                    <svg class="actions-icon">
-                      <use href="./images/symbol-defs.svg#icon-linkd"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="team-item">
-            <div>
+                <div class="actions-div">
+                  <ul class="actions-list">
+                    <li class="actions-item">
+                      <a href="" class="actions-link">
+                        <svg class="actions-icon">
+                          <use href="./images/symbol-defs.svg#icon-insta"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="actions-item">
+                      <a href="" class="actions-link">
+                        <svg class="actions-icon">
+                          <use href="./images/symbol-defs.svg#icon-face"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="actions-item">
+                      <a href="" class="actions-link">
+                        <svg class="actions-icon">
+                          <use href="./images/symbol-defs.svg#icon-twit"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="actions-item">
+                      <a href="" class="actions-link">
+                        <svg class="actions-icon">
+                          <use href="./images/symbol-defs.svg#icon-linkd"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li class="team-item">
               <img src="./images/foto2.jpg" alt="Team" width="200" />
-            </div>
 
-            <h3 class="team-name" style="font-weight: 500">Ольга Рєпіна</h3>
-            <p class="team-text">Frontend Developer</p>
+              <div class="team-div">
+              <h3 class="team-name" style="font-weight: 500">Ольга Рєпіна</h3>
+              <p class="team-text">Frontend Developer</p>
 
-            <div class="actions-div">
-              <ul class="actions-list">
-                <li class="actions-item">
-                  <a href="" class="actions-link">
-                    <svg class="actions-icon">
-                      <use href="./images/symbol-defs.svg#icon-insta"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="actions-item">
-                  <a href="" class="actions-link">
-                    <svg class="actions-icon">
-                      <use href="./images/symbol-defs.svg#icon-face"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="actions-item">
-                  <a href="" class="actions-link">
-                    <svg class="actions-icon">
-                      <use href="./images/symbol-defs.svg#icon-twit"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="actions-item">
-                  <a href="" class="actions-link">
-                    <svg class="actions-icon">
-                      <use href="./images/symbol-defs.svg#icon-linkd"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="actions-div">
+                <ul class="actions-list">
+                  <li class="actions-item">
+                    <a href="" class="actions-link">
+                      <svg class="actions-icon">
+                        <use href="./images/symbol-defs.svg#icon-insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="actions-item">
+                    <a href="" class="actions-link">
+                      <svg class="actions-icon">
+                        <use href="./images/symbol-defs.svg#icon-face"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="actions-item">
+                    <a href="" class="actions-link">
+                      <svg class="actions-icon">
+                        <use href="./images/symbol-defs.svg#icon-twit"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="actions-item">
+                    <a href="" class="actions-link">
+                      <svg class="actions-icon">
+                        <use href="./images/symbol-defs.svg#icon-linkd"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
-          </li>
-          <li class="team-item">
-            <div>
+            </li>
+            <li class="team-item">
               <img src="./images/foto3.jpg" alt="Team" width="200" />
+
+              <div class="team-div"> 
+              <h3 class="team-name" style="font-weight: 500">Микола Тарасов</h3>
+              <p class="team-text">Marketing</p>
+
+              <div class="actions-div">
+                <ul class="actions-list">
+                  <li class="actions-item">
+                    <a href="" class="actions-link">
+                      <svg class="actions-icon">
+                        <use href="./images/symbol-defs.svg#icon-insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="actions-item">
+                    <a href="" class="actions-link">
+                      <svg class="actions-icon">
+                        <use href="./images/symbol-defs.svg#icon-face"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="actions-item">
+                    <a href="" class="actions-link">
+                      <svg class="actions-icon">
+                        <use href="./images/symbol-defs.svg#icon-twit"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="actions-item">
+                    <a href="" class="actions-link">
+                      <svg class="actions-icon">
+                        <use href="./images/symbol-defs.svg#icon-linkd"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
+            </li>
 
-            <h3 class="team-name" style="font-weight: 500">Микола Тарасов</h3>
-            <p class="team-text">Marketing</p>
-
-            <div class="actions-div">
-              <ul class="actions-list">
-                <li class="actions-item">
-                  <a href="" class="actions-link">
-                    <svg class="actions-icon">
-                      <use href="./images/symbol-defs.svg#icon-insta"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="actions-item">
-                  <a href="" class="actions-link">
-                    <svg class="actions-icon">
-                      <use href="./images/symbol-defs.svg#icon-face"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="actions-item">
-                  <a href="" class="actions-link">
-                    <svg class="actions-icon">
-                      <use href="./images/symbol-defs.svg#icon-twit"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="actions-item">
-                  <a href="" class="actions-link">
-                    <svg class="actions-icon">
-                      <use href="./images/symbol-defs.svg#icon-linkd"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </li>
-
-          <li class="team-item">
-            <div>
+            <li class="team-item">
               <img src="./images/foto4.jpg" alt="Team" width="200" />
-            </div>
 
-            <h3 class="team-name" style="font-weight: 500">Михайло Єрмаков</h3>
-            <p class="team-text">UI Designer</p>
+              <div class="team-div"> 
+              <h3 class="team-name" style="font-weight: 500">
+                Михайло Єрмаков
+              </h3>
+              <p class="team-text">UI Designer</p>
 
-            <div class="actions-div">
-              <ul class="actions-list">
-                <li class="actions-item">
-                  <a href="" class="actions-link">
-                    <svg class="actions-icon">
-                      <use href="./images/symbol-defs.svg#icon-insta"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="actions-item">
-                  <a href="" class="actions-link">
-                    <svg class="actions-icon">
-                      <use href="./images/symbol-defs.svg#icon-face"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="actions-item">
-                  <a href="" class="actions-link">
-                    <svg class="actions-icon">
-                      <use href="./images/symbol-defs.svg#icon-twit"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="actions-item">
-                  <a href="" class="actions-link">
-                    <svg class="actions-icon">
-                      <use href="./images/symbol-defs.svg#icon-linkd"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="actions-div">
+                <ul class="actions-list">
+                  <li class="actions-item">
+                    <a href="" class="actions-link">
+                      <svg class="actions-icon">
+                        <use href="./images/symbol-defs.svg#icon-insta"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="actions-item">
+                    <a href="" class="actions-link">
+                      <svg class="actions-icon">
+                        <use href="./images/symbol-defs.svg#icon-face"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="actions-item">
+                    <a href="" class="actions-link">
+                      <svg class="actions-icon">
+                        <use href="./images/symbol-defs.svg#icon-twit"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="actions-item">
+                    <a href="" class="actions-link">
+                      <svg class="actions-icon">
+                        <use href="./images/symbol-defs.svg#icon-linkd"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
-          </li>
-        </ul>
-      </div>
+            </li>
+          </ul>
+        </div>
       </section>
+
+      <!-- ---------------- team--------------------- -->
+
+      <!-- -------------------  clients ------------------ -->
 
       <section class="clients section">
         <div class="container">
@@ -377,57 +387,55 @@
     <!-- -------- footer------ -->
     <footer class="footer">
       <div class="container footer-div">
-        
-          <div class="footer-div-child">
-            <a href="./" class="logotype"
-              ><span style="color: #2196f3">Web</span>
-              <span style="color: #fff">Studio</span></a
+        <div class="footer-div-child">
+          <a href="./" class="logotype"
+            ><span style="color: #2196f3">Web</span>
+            <span style="color: #fff">Studio</span></a
+          >
+          <address class="adress">
+            м. Київ, пр-т Лесі Українки, 26
+            <a href="mailto:info@devstudio.com" class="email-tel"
+              >info@devstudio.com</a
             >
-            <address class="adress">
-              м. Київ, пр-т Лесі Українки, 26
-              <a href="mailto:info@devstudio.com" class="email-tel"
-                >info@devstudio.com</a
-              >
-              <a href="tel:+38 096 111 11 11" class="email-tel"
-                >+38 096 111 11 11</a
-              >
-            </address>
-          </div>
+            <a href="tel:+38 096 111 11 11" class="email-tel"
+              >+38 096 111 11 11</a
+            >
+          </address>
+        </div>
 
-          <div class="footer-div-child">
-            <h3 class="actions-div-title">приєднуйтесь</h3>
-            <ul class="sociallinks-list">
-              <li class="sociallinks-item">
-                <a href="" class="social-link">
-                  <svg class="sociallinks-icon">
-                    <use href="./images/symbol-defs.svg#icon-insta"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="sociallinks-item">
-                <a href="" class="social-link">
-                  <svg class="sociallinks-icon">
-                    <use href="./images/symbol-defs.svg#icon-twit"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="sociallinks-item">
-                <a href="" class="social-link">
-                  <svg class="sociallinks-icon">
-                    <use href="./images/symbol-defs.svg#icon-face"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="sociallinks-item">
-                <a href="" class="social-link">
-                  <svg class="sociallinks-icon">
-                    <use href="./images/symbol-defs.svg#icon-linkd"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-        
+        <div class="footer-div-child">
+          <h3 class="actions-div-title">приєднуйтесь</h3>
+          <ul class="sociallinks-list">
+            <li class="sociallinks-item">
+              <a href="" class="social-link">
+                <svg class="sociallinks-icon">
+                  <use href="./images/symbol-defs.svg#icon-insta"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sociallinks-item">
+              <a href="" class="social-link">
+                <svg class="sociallinks-icon">
+                  <use href="./images/symbol-defs.svg#icon-twit"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sociallinks-item">
+              <a href="" class="social-link">
+                <svg class="sociallinks-icon">
+                  <use href="./images/symbol-defs.svg#icon-face"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sociallinks-item">
+              <a href="" class="social-link">
+                <svg class="sociallinks-icon">
+                  <use href="./images/symbol-defs.svg#icon-linkd"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
     <!-- -------- footer------ -->
