--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
   </header>
 
     <main>
-        <section class="portfolio">
+        <section class="portfolio section">
          
       <ul class="filter-list">
         <li class="filter-item"><button type="button" class="filter-btn">Усі</button></li>
@@ -107,6 +107,7 @@
             <h3 class="portfolio-title">Проєкт Prime</h3>
           <p class="portfolio-text">Маркетинг</p>
           </div>
+        </a>
         </li>
         <li class="portfolio-item">
           <a href="" class="portfolio-link">
@@ -176,6 +177,7 @@
           </a>
         </li>
       </ul>
+ 
     </div>
     </section>
     </main>
